# spinnaker-neuromorphic-classifier

./: README.md  README.md~
Spinn5-LargeModel-LiveSpiking/: .cproject  .project  README.md
Spinn5-LargeModel-LiveSpiking/Debug/: makefile
Spinn5-LargeModel-LiveSpiking/Debug/src/: subdir.mk
Spinn5-LargeModel-LiveSpiking/Debug/src/C/: subdir.mk
Spinn5-LargeModel-LiveSpiking/Release/: Spinnaker_MNIST_LiveSpiking  objects.mk  sources.mk
Spinn5-LargeModel-LiveSpiking/src/C/: DataAndVrFunctions.cpp  NeuralGas.cpp  experiment.cpp  experiment.h  utilities.cc
Spinn5-LargeModel-LiveSpiking/src/C/SpinnIO/: CMakeLists.txt
Spinn5-LargeModel-LiveSpiking/src/C/SpinnIO/src/: DatabaseIF.cpp  DatabaseIF.h  EIEIOMessage.cpp  EIEIOMessage.h  EIEIOReceiver.cpp  EIEIOReceiver.h  EIEIOSender.cpp  EIEIOSender.h  SocketIF.cpp  SocketIF.h  SpikeInjectionMultiPopulation.cpp  SpikeInjectionMultiPopulation.h  SpikeInjectionPopulation.cpp  SpikeInjectionPopulation.h  SpikeReceiverPopulation.cpp  SpikeReceiverPopulation.h  StopWatch.cpp  StopWatch.h  Threadable.cpp  Threadable.h  spinnio_utilities.cc
Spinn5-LargeModel-LiveSpiking/src/python/: BuildAndRunClassifier_LiveSpikingInput.py  Classifier_LiveSpikingInput.py  ModelParams-MNISTClassifier.txt  ModellingUtils.py  Settings-MNISTClassifier.txt  spynnaker.cfg
experiment1/: BuildAndRunClassifier.py  BuildAndRunClassifier.sh  ClassActivation_SpikeSourceData.csv  Classifier.py  ModelParams-MNISTClassifier.txt  ModellingUtils.py  Settings-MNISTClassifier.txt  VrResponse_SpikeSourceData.csv  readme.txt~
(+18 files in other folders)
